more rewrites and optimizations